link to DRL paper

--- a/_publications/2020-10-25-DRL.md
+++ b/_publications/2020-10-25-DRL.md
@@ -5,11 +5,11 @@ permalink: /publication/2020-10-25-DRL
 excerpt: 'We present a system to train neural-network policies for local planners, explicitly accounting for humans navigating the space.'
 date: 2020-10-25
 venue: 'International Conference on Intelligent Robots and Systems, IROS 2020'
-# paperurl: 'http://academicpages.github.io/files/paper1.pdf'
+paperurl: 'http://ras.papercept.net/images/temp/IROS/files/0122.pdf'
 authors: 'Ronja Güldenring, Michael Görner, Norman Hendrich, Niels Jul Jacobsen, and Jianwei Zhang.'
 # citation: 
 ---
 Abstract: Established indoor robot navigation frameworks build on the separation between global and local planners.
 Whereas global planners rely on traditional graph search algorithms, local planners are expected to handle driving dynamics and resolve minor conflicts. We present a system to train neural-network policies for such a local planner component, explicitly accounting for humans navigating the space. DRL-agents are trained in randomized virtual 2D environments with simulated human interaction. Transferability to the real world is achieved through sufficiently abstract state representations, relying on 2D lidar. The trained agents can be deployed as a drop-in replacement for other local planners and significantly improve on traditional implementations. Performance is demonstrated on a MiR-100 transport robot.
 
-Link: Coming soon
+Link to PDF: [Learning Local Planners for Human-aware Navigation in Indoor Environments](http://ras.papercept.net/images/temp/IROS/files/0122.pdf){:target="_blank"}
